--- a/src/Weather.css
+++ b/src/Weather.css
@@ -49,7 +49,7 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 1;
-  margin-left: 5px;
+  margin-left: 0;
   position: relative;
-  top: -32px;
+  top: -34px;
 }
