--- a/src/Weather.css
+++ b/src/Weather.css
@@ -30,11 +30,10 @@
   list-style: none;
 }
 
-.Weather img {
+.Weather canvas {
   float: left;
-  height: 64px;
-  width: 64px;
-  margin-right: 10px;
+  margin-right: 5px;
+  margin-top: 5px;
 }
 
 .Weather .temperature {
