--- a/src/Weather.css
+++ b/src/Weather.css
@@ -32,15 +32,15 @@
 
 .Weather canvas {
   float: left;
-  margin-right: 5px;
-  margin-top: 5px;
+  margin: 10px auto;
 }
 
 .Weather .temperature {
   color: rgb(33, 33, 33);
   font-size: 64px;
-  line-height: 64px;
   font-weight: 400;
+  line-height: 64px;
+  margin-left: 10px;
 }
 
 .Weather .unit {
@@ -48,7 +48,6 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 1;
-  margin-left: 0;
   position: relative;
   top: -34px;
 }
