--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,18 @@
 .App {
+  color: #134056;
   max-width: 600px;
   margin: 30px auto;
 }
 
 .App footer {
-  font-size: 11px;
+  font-size: 12px;
   margin: 10px 0;
 }
 
 .App a {
   text-decoration: none;
+}
+
+body {
+  background: #f6f3ef;
 }
